# crab-rs

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  Makefile.toml  README.md  index.html  makefile.toml  rust-toolchain.toml
.run/: Debug Desktop.run.xml
assets/: Info.plist  index_prod.html  ios.css  main.css
crates/app/: Cargo.toml  Dioxus.toml  index.html
crates/app/public/: style.css
crates/app/src/: api.rs  lib.rs
crates/tool/: Cargo.toml
public/: Info.plist  main.css
src/: api.rs  main.rs  models.rs
src/components/: bitcoin_comp.rs  common_alg_comp.rs  erc20_comp.rs  misc_comp.rs  mod.rs
src/comps/: mod.rs
